@@ -271,6 +271,9 @@ public:
     /** @brief write results (--output-file=&lt;file&gt;) */
     std::string outputFile;
 
+    enum class OutputFormat : std::uint8_t {text, plist, sarif, xml};
+    OutputFormat outputFormat = OutputFormat::text;
+
     Platform platform;
 
     /** @brief pid of cppcheck. Intention is that this is set in the main process. */
@@ -440,9 +443,6 @@ public:
 
     /** @brief Is --verbose given? */
     bool verbose{};
-
-    /** @brief write SARIF results (--sarif) */
-    bool sarif{};
 
     /** @brief write XML results (--xml) */
     bool xml{};
